--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <div class="about-grid">
           <p>
-            I’m a certified full stack developer with 8+ years of
+            I’m a certified full stack developer
             experience using the MERN stack, REST API development, and cloud
             deployment. I enjoy turning complex business requirements into
             reliable, production-ready products, and I’m comfortable working
@@ -310,4 +310,5 @@
     <script src="script.js"></script>
   </body>
   </html>
+
 
